[gd_scene load_steps=6 format=2]

[ext_resource path="res://MainUI/MainUI.gd" type="Script" id=1]
[ext_resource path="res://Fonts/GlassAntiqua-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[node name="MainUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -732.0
rect_pivot_offset = Vector2( -740, 190 )
script = ExtResource( 1 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_bottom = 58.0
custom_constants/margin_right = 30
custom_constants/margin_top = 20
custom_constants/margin_left = 30

[node name="Menus" type="HBoxContainer" parent="Margin"]
margin_left = 30.0
margin_top = 20.0
margin_right = 1186.0
margin_bottom = 58.0

[node name="File" type="MenuButton" parent="Margin/Menus"]
margin_right = 51.0
margin_bottom = 38.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_hover = Color( 0.705882, 0.705882, 0.705882, 1 )
text = "File"
align = 0
items = [ "New", null, 0, false, false, -1, 0, null, "", false, "Open", null, 0, false, false, -1, 0, null, "", false, "Save", null, 0, false, false, -1, 0, null, "", false, "Save As", null, 0, false, false, -1, 0, null, "", false, "Quit", null, 0, false, false, -1, 0, null, "", false ]
switch_on_hover = true

[node name="Open" type="FileDialog" parent="Margin/Menus/File"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 160.734
margin_top = 82.0
margin_right = 953.734
margin_bottom = 631.0
rect_pivot_offset = Vector2( 396.5, 274.5 )
window_title = "Open a File"
mode = 0
access = 2
current_dir = "D:/Nora/Documents/!LUNEAL LABS/Writer/Writee"
current_path = "D:/Nora/Documents/!LUNEAL LABS/Writer/Writee/"

[node name="SaveAs" type="FileDialog" parent="Margin/Menus/File"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 160.734
margin_top = 82.0
margin_right = 953.734
margin_bottom = 631.0
rect_pivot_offset = Vector2( 396.5, 274.5 )
access = 2
current_dir = "D:/Nora/Documents/!LUNEAL LABS/Writer/Writee"
current_path = "D:/Nora/Documents/!LUNEAL LABS/Writer/Writee/"
[connection signal="file_selected" from="Margin/Menus/File/Open" to="." method="_on_Open_file_selected"]
[connection signal="file_selected" from="Margin/Menus/File/SaveAs" to="." method="_on_SaveAs_file_selected"]
